--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,22 @@ version: '3'
 volumes:
   pg_data:
   static:
+  media:
 
 services:
-  db:
-    image: postgres:13
+  db_1:
+    image: postgres:13.10
+    env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
     build: ./backend/
     env_file: .env
+    volumes:
+      - static:/static
+      - media:/media
+    depends_on:
+      - db_1
   frontend:
     env_file: .env
     build: ./frontend/
@@ -21,7 +28,10 @@ services:
   gateway:
     build: ./nginx/
     env_file: .env
-    ports:
-      - 9000:80
     volumes:
       - static:/static
+      - media:/media
+    ports:
+      - 9000:80
+    depends_on:
+      - backend
