--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,37 +1,44 @@
 version: '3'
 
 volumes:
+
   pg_data:
-  static_volume:
+  static:
   media:
 
 services:
+
   db:
-    image: postgres:13.10
+    image: postgres:13
+    container_name: kittygram_db
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
+
   backend:
     image: rerolll/kittygram_backend
+    container_name: kittygram_backend
     env_file: .env
     volumes:
-      - static_volume:/backend_static
-      - media:/app/media/
+      - media:/media/
+      - static:/backend_static
     depends_on:
       - db
+
   frontend:
     image: rerolll/kittygram_frontend
+    container_name: kittygram_frontend
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static_volume:/frontend_static
+      - static:/frontend_static/
+
   gateway:
     image: rerolll/kittygram_gateway
+    container_name: kittygram_gateway
     env_file: .env
     volumes:
-      - static_volume:/staticfiles/
-      - media:/app/media/
-    depends_on:
-      - backend
+      - media:/media/
+      - static:/staticfiles/
     ports:
       - 9000:80
