--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,48 @@
+# docker-compose.yml
 version: '3'
 
 volumes:
+
   pg_data:
   static:
   media:
 
 services:
-  db_1:
-    image: postgres:13.10
+
+  db:
+    image: postgres:13
+    container_name: kittygram_db
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
+
   backend:
     build: ./backend/
+    container_name: kittygram_backend
     env_file: .env
     volumes:
-      - static:/static
-      - media:/media
+      - static:/backend_static
+      - media:/app/media
     depends_on:
-      - db_1
+      - db
+
   frontend:
-    env_file: .env
     build: ./frontend/
-    command: cp -r /app/build/. /static/
+    container_name: kittygram_frontend
+    env_file: .env
+    command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static:/static
+      - static:/frontend_static/
+    depends_on:
+      - backend
+
   gateway:
     build: ./nginx/
+    container_name: kittygram_gateway
     env_file: .env
     volumes:
-      - static:/static
-      - media:/media
+      - media:/app/media/
+      - static:/staticfiles
     ports:
       - 9000:80
     depends_on:
