--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,14 +6,19 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/api/;
   }
+
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/admin/;
   }
 
+  location /media/ {
+    alias /media/;
+  }
+
   location / {
     alias /staticfiles/;
     try_files $uri $uri/ /index.html;
-    index index.html;
   }
+
 }
