--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  index index.html;
+  server_tokens off;
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -11,14 +11,12 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/admin/;
   }
-
   location /media/ {
     alias /media/;
   }
-
+ 
   location / {
     alias /staticfiles/;
     try_files $uri $uri/ /index.html;
   }
-
-}
+} 
