--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -2,8 +2,6 @@ name: Main Kittigram workflow
 
 on:
   push:
-    branches:
-      - main
 
 jobs:
   tests:
@@ -12,9 +10,9 @@ jobs:
       postgres:
         image: postgres:13.10
         env:
-          POSTGRES_USER: django_user
-          POSTGRES_PASSWORD: django_password
-          POSTGRES_DB: django_db
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -32,9 +30,9 @@ jobs:
         pip install -r ./backend/requirements.txt 
     - name: Test with flake8 and django tests
       env:
-        POSTGRES_USER: django_user
-        POSTGRES_PASSWORD: django_password
-        POSTGRES_DB: django_db
+        POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+        POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+        POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
       run: |
@@ -44,24 +42,32 @@ jobs:
 
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
-        uses: docker/build-push-action@v4
-        with:
-          context: ./backend/
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_backend:latest
+    on:
+      push:
+        branches:
+          - main
+    jobs:
+      build-and-push:
+        runs-on: ubuntu-latest
+
+        needs: tests
+
+        steps:
+          - name: Check out the repo
+            uses: actions/checkout@v3
+          - name: Set up Docker Buildx
+            uses: docker/setup-buildx-action@v2
+          - name: Login to Docker
+            uses: docker/login-action@v2
+            with:
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
+          - name: Push to DockerHub
+            uses: docker/build-push-action@v4
+            with:
+              context: ./backend/
+              push: true
+              tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_backend:latest
 
   frontend_tests:
     runs-on: ubuntu-latest
